<resources>

    <string name="app_name">WeatherApp</string>

    <string name="add_city_header">Click city to add</string>
    <string name="city_title">City</string>
    <string name="city_already_added_error">City is already added</string>
    <string name="write_city_name">"Please write city name"</string>
    <string name="temperature_value">"%1$s \u2103"</string>
    <string name="hectopascals">"%1$s hPa"</string>
    <string name="meters">"%1$s m"</string>
    <string name="meters_per_second">"%1$s m/s"</string>
    <string name="percent">"%1$s %%"</string>
    <string name="city_not_found">City not found</string>
    <string name="city_name">City name</string>
    <string name="country">Country</string>
    <string name="search_city">Search city</string>
    <string name="temperature_feel_like">Feel-like</string>
    <string name="pressure_title">Pressure</string>
    <string name="visibility_title">Visibility</string>
    <string name="wind_speed_title">Wind Speed</string>
    <string name="cloudiness_title">Cloudiness</string>
    <string name="humidity_title">Humidity</string>
    <string name="weather_description">Weather Description</string>
    <string name="hourly_weather_button">3 hours weather</string>
    <string name="polution">Polution indicators</string>
    <string name="polution_details">Polution details</string>
</resources>