<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/city_weather_details_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_default"
    android:background="@color/dark_marine_transparent"
    android:padding="@dimen/margin_default">

    <TextView
        android:id="@+id/polution_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/polution_details"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_0.5x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/co_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_0.25x"
        android:layout_marginTop="@dimen/margin_default"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/polution_dialog_title"
        tools:text="@string/temperature_feel_like" />

    <TextView
        android:id="@+id/co_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/polution_dialog_title"
        tools:text="23" />


    <TextView
        android:id="@+id/no_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/co_title"
        tools:text="@string/pressure_title" />

    <TextView
        android:id="@+id/no_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/co_value"
        tools:text="Pressure Value" />

    <TextView
        android:id="@+id/no2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_value"
        tools:text="@string/visibility_title" />

    <TextView
        android:id="@+id/no2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_value"
        tools:text="Visibility Value" />

    <TextView
        android:id="@+id/o3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no2_title"
        tools:text="@string/wind_speed_title" />

    <TextView
        android:id="@+id/o3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no2_title"
        tools:text="Wind Speed Value" />


    <TextView
        android:id="@+id/so2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/o3_title"
        tools:text="@string/cloudiness_title" />

    <TextView
        android:id="@+id/so2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/o3_value"
        tools:text="Cloudiness Value" />

    <TextView
        android:id="@+id/pm25_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/so2_title"
        tools:text="@string/humidity_title" />

    <TextView
        android:id="@+id/pm25_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/so2_value"
        tools:text="humidity Value" />

    <TextView
        android:id="@+id/pm10_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm25_title"
        tools:text="@string/humidity_title" />

    <TextView
        android:id="@+id/pm10_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm25_value"
        tools:text="humidity Value" />

    <TextView
        android:id="@+id/nh3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:text="@string/humidity_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm10_title" />

    <TextView
        android:id="@+id/nh3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_0.5x"
        android:padding="@dimen/margin_0.25x"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pm10_value"
        tools:text="humidity Value" />

</androidx.constraintlayout.widget.ConstraintLayout>